feat(api): add tests
