# docs/swagger.json
@@ -35,7 +35,7 @@
                     }
                 ],
                 "responses": {
-                    "200": {
+                    "201": {
                         "description": "Successful creation, returns the created slug",
                         "schema": {
                             "$ref": "#/definitions/github_com_ArtemS18_ShortURL-API_internal_usecase_dto.CreateSlugResponse"
@@ -44,13 +44,13 @@
                     "404": {
                         "description": "Not Found",
                         "schema": {
-                            "$ref": "#/definitions/github_com_ArtemS18_ShortURL-API_internal_delivery_restapi_utils.ErrorResponse"
+                            "$ref": "#/definitions/github_com_ArtemS18_ShortURL-API_internal_delivery_restapi_utils.BaseErrorResponse"
                         }
                     },
                     "500": {
                         "description": "Internal Server Error",
                         "schema": {
-                            "$ref": "#/definitions/github_com_ArtemS18_ShortURL-API_internal_delivery_restapi_utils.ErrorResponse"
+                            "$ref": "#/definitions/github_com_ArtemS18_ShortURL-API_internal_delivery_restapi_utils.BaseErrorResponse"
                         }
                     }
                 }
@@ -70,8 +70,16 @@
                     {
                         "type": "string",
                         "description": "Slug",
-                        "name": "{slug}",
+                        "name": "slug",
                         "in": "path",
+                        "required": true
+                    },
+                    {
+                        "type": "boolean",
+                        "default": true,
+                        "description": "Redirect to original URL instead of returning it in response",
+                        "name": "redirect",
+                        "in": "query",
                         "required": true
                     }
                 ],
@@ -85,13 +93,13 @@
                     "404": {
                         "description": "Not Found",
                         "schema": {
-                            "$ref": "#/definitions/github_com_ArtemS18_ShortURL-API_internal_delivery_restapi_utils.ErrorResponse"
+                            "$ref": "#/definitions/github_com_ArtemS18_ShortURL-API_internal_delivery_restapi_utils.BaseErrorResponse"
                         }
                     },
                     "500": {
                         "description": "Internal Server Error",
                         "schema": {
-                            "$ref": "#/definitions/github_com_ArtemS18_ShortURL-API_internal_delivery_restapi_utils.ErrorResponse"
+                            "$ref": "#/definitions/github_com_ArtemS18_ShortURL-API_internal_delivery_restapi_utils.BaseErrorResponse"
                         }
                     }
                 }
@@ -99,11 +107,12 @@
         }
     },
     "definitions": {
-        "github_com_ArtemS18_ShortURL-API_internal_delivery_restapi_utils.ErrorResponse": {
+        "github_com_ArtemS18_ShortURL-API_internal_delivery_restapi_utils.BaseErrorResponse": {
             "type": "object",
             "properties": {
-                "details": {
-                    "type": "string"
+                "error": {},
+                "success": {
+                    "type": "boolean"
                 }
             }
         },
